# pypalp

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_and_test.yml  deploy.yml  python.yml
include/pypalp/: global.hpp  palp_types.hpp  polytope.hpp  utils.hpp
src/pypalp/: pypalp.cpp
tests/: test_polytope.py
